--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ville Savolainen</title>
-</head>
-<body>
-  <h1>Hello</h1>
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio, velit asperiores tenetur est, reprehenderit aliquam beatae, autem voluptatum esse sed ipsam ducimus perspiciatis accusamus quis deserunt vitae unde impedit officia?</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ville Savolainen</title>
+  </head>
+  <body>
+    <h1>Hello</h1>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio,
+      velit asperiores tenetur est, reprehenderit aliquam beatae, autem
+      voluptatum esse sed ipsam ducimus perspiciatis accusamus quis deserunt
+      vitae unde impedit officia?
+    </p>
+    <img src="./Images/self.jpeg" alt="none">
+  </body>
 </html>
