--- a/index.html
+++ b/index.html
@@ -1,18 +1,244 @@
 <!DOCTYPE html>
-<html lang="en">
+<html
+  class="wf-pragmaticawebcondensed-n4-active wf-pragmaticaweb-n7-active wf-pragmaticaweb-i7-active wf-pragmaticaweb-n3-active wf-pragmaticaweb-i3-active wf-active hxosqfclkoa idc0_319"
+  lang="en"
+>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
     <title>Ville Savolainen</title>
+    <!-- Bootstrap Core CSS -->
+    <link href="files/bootstrap.css" rel="stylesheet" />
+    <!-- Custom CSS -->
+    <link href="files/grayscale.css" rel="stylesheet" />
+    <!-- Custom Fonts -->
+    <link href="files/font-awesome.css" rel="stylesheet" type="text/css" />
+    <style type="text/css">
+      .tk-pragmatica-web {
+        font-family: "pragmatica-web", sans-serif;
+      }
+      .tk-pragmatica-web-condensed {
+        font-family: "pragmatica-web-condensed", sans-serif;
+      }
+    </style>
+    <style type="text/css">
+      @font-face {
+        font-family: pragmatica-web;
+        src: url(https://use.typekit.net/af/983872/0000000000000000000100cc/27/l?subset_id=2&fvd=n7&v=3)
+            format("woff2"),
+          url(https://use.typekit.net/af/983872/0000000000000000000100cc/27/d?subset_id=2&fvd=n7&v=3)
+            format("woff"),
+          url(https://use.typekit.net/af/983872/0000000000000000000100cc/27/a?subset_id=2&fvd=n7&v=3)
+            format("opentype");
+        font-weight: 700;
+        font-style: normal;
+      }
+      @font-face {
+        font-family: pragmatica-web;
+        src: url(https://use.typekit.net/af/a362cc/0000000000000000000100cd/27/l?subset_id=2&fvd=i7&v=3)
+            format("woff2"),
+          url(https://use.typekit.net/af/a362cc/0000000000000000000100cd/27/d?subset_id=2&fvd=i7&v=3)
+            format("woff"),
+          url(https://use.typekit.net/af/a362cc/0000000000000000000100cd/27/a?subset_id=2&fvd=i7&v=3)
+            format("opentype");
+        font-weight: 700;
+        font-style: italic;
+      }
+      @font-face {
+        font-family: pragmatica-web;
+        src: url(https://use.typekit.net/af/ee2748/0000000000000000000100d0/27/l?subset_id=2&fvd=n3&v=3)
+            format("woff2"),
+          url(https://use.typekit.net/af/ee2748/0000000000000000000100d0/27/d?subset_id=2&fvd=n3&v=3)
+            format("woff"),
+          url(https://use.typekit.net/af/ee2748/0000000000000000000100d0/27/a?subset_id=2&fvd=n3&v=3)
+            format("opentype");
+        font-weight: 300;
+        font-style: normal;
+      }
+      @font-face {
+        font-family: pragmatica-web;
+        src: url(https://use.typekit.net/af/86eeb6/0000000000000000000100d1/27/l?subset_id=2&fvd=i3&v=3)
+            format("woff2"),
+          url(https://use.typekit.net/af/86eeb6/0000000000000000000100d1/27/d?subset_id=2&fvd=i3&v=3)
+            format("woff"),
+          url(https://use.typekit.net/af/86eeb6/0000000000000000000100d1/27/a?subset_id=2&fvd=i3&v=3)
+            format("opentype");
+        font-weight: 300;
+        font-style: italic;
+      }
+      @font-face {
+        font-family: pragmatica-web-condensed;
+        src: url(https://use.typekit.net/af/841d09/0000000000000000000100d4/27/l?subset_id=2&fvd=n4&v=3)
+            format("woff2"),
+          url(https://use.typekit.net/af/841d09/0000000000000000000100d4/27/d?subset_id=2&fvd=n4&v=3)
+            format("woff"),
+          url(https://use.typekit.net/af/841d09/0000000000000000000100d4/27/a?subset_id=2&fvd=n4&v=3)
+            format("opentype");
+        font-weight: 400;
+        font-style: normal;
+      }
+    </style>
+    <script type="text/javascript">
+      try {
+        Typekit.load();
+      } catch (e) {}
+    </script>
   </head>
-  <body>
-    <h1>Hello</h1>
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio,
-      velit asperiores tenetur est, reprehenderit aliquam beatae, autem
-      voluptatum esse sed ipsam ducimus perspiciatis accusamus quis deserunt
-      vitae unde impedit officia?
-    </p>
-    <img src="./Images/self.jpeg" alt="none">
+
+  <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+    <!-- Navigation -->
+    <nav
+      class="navbar navbar-custom navbar-fixed-top top-nav-collapse"
+      role="navigation"
+    >
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand page-scroll" href="#page-top">
+            <span class="light">Ville</span> Savolainen
+          </a>
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+          <ul class="nav navbar-nav">
+            <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+            <li class="hidden">
+              <a href="#page-top"></a>
+            </li>
+            <li class="">
+                <a class="page-scroll" href="#projects">Projects</a>
+            </li>
+            <li class="">
+              <a class="page-scroll" href="#about">About</a>
+            </li>
+            <li class="active">
+              <a class="page-scroll" href="#contact">Contact</a>
+            </li>
+          </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+      </div>
+      <!-- /.container -->
+    </nav>
+    <!-- Intro Header -->
+    <header class="intro">
+      <div class="intro-body">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-10 col-md-offset-1">
+              <h1 class="brand-heading">
+                <span class="light">Ville</span> Savolainen
+              </h1>
+              <p class="intro-text">
+                <i>Hello, I'm Ville Savolainen.<br>
+                I'm a web developer.</i>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <section id="projects" class="container content-section">
+        <div class="row text-center">
+            <div class="col-lg-8 col-lg-offset-2">
+              <h2>Projects</h2>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xs-4 col-sm-2 col-sm-offset-2"><a href="https://vadelmapilvi.com/">Vadelmapilvi</a></div>
+            <div class="col-xs-8 col-sm-8">
+              <p>House service app built with React, NodeJS, Nginx & MongoDB</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xs-4 col-sm-2 col-sm-offset-2"><a href="https://descents.rocks/">Descents.rocks</a></div>
+            <div class="col-xs-8 col-sm-8">
+              <p>Bands website built with PHP & Apache2</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xs-4 col-sm-2 col-sm-offset-2"><a href="https://github.com/VilleSavolainen1/Weather-App">Weather-app</a></div>
+            <div class="col-xs-8 col-sm-8">
+              <p>Weather-app built with React Native & OpenWeatherMap API</p>
+            </div>
+          </div>
+    </section>
+    <!-- About Section -->
+    <section id="about" class="container content-section">
+      <div class="row text-center">
+        <div class="col-lg-8 col-lg-offset-2">
+          <h2>About</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-4 col-sm-2 col-sm-offset-2">Contributing</div>
+        <div class="col-xs-8 col-sm-8">
+         <p>asd</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-4 col-sm-2 col-sm-offset-2">Teaching</div>
+        <div class="col-xs-8 col-sm-8">
+         <p>asd</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="container content-section text-center">
+      <div class="row">
+        <div class="col-lg-8 col-lg-offset-2">
+          <h2>Contact</h2>
+          <p>
+            Email
+            <a href="mailto:visavola@gmail.com">visavola@gmail.com</a>
+          </p>
+          <a
+            href="https://www.linkedin.com/in/ville-savolainen-21a175193/"
+            class="btn btn-default btn-lg"
+            ><i class="fa fa-linkedin fa-fw"></i>
+            <span class="network-name">LinkedIn</span></a
+          >
+
+          <a href="https://github.com/VilleSavolainen1/" class="btn btn-default btn-lg"
+            ><i class="fa fa-github fa-fw"></i>
+            <span class="network-name">Github</span></a
+          >
+
+        
+
+        </div>
+      </div>
+    </section>
+    <!-- Footer -->
+    <footer></footer>
+    <!-- jQuery -->
+    <script src="files/jquery.js"></script>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="files/bootstrap.js"></script>
+    <!-- Plugin JavaScript -->
+    <script src="files/jquery_002.js"></script>
+    <!-- Custom Theme JavaScript -->
+    <script src="files/grayscale.js"></script>
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(["_setAccount", "UA-36113927-1"]);
+      _gaq.push(["_trackPageview"]);
+
+      (function () {
+        var ga = document.createElement("script");
+        ga.type = "text/javascript";
+        ga.async = true;
+        ga.src =
+          ("https:" == document.location.protocol
+            ? "https://ssl"
+            : "http://www") + ".google-analytics.com/ga.js";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
   </body>
 </html>
