--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-4 col-sm-2 col-sm-offset-2"><a href="https://descents.rocks/">Descents.rocks</a></div>
+            <div class="col-xs-4 col-sm-2 col-sm-offset-2"><a href="https://descents.rocks/">Descents</a></div>
             <div class="col-xs-8 col-sm-8">
               <p>Bands website built with PHP & Apache2</p>
             </div>
