Added about section

--- a/index.html
+++ b/index.html
@@ -173,16 +173,11 @@
           <h2>About</h2>
         </div>
       </div>
-      <div class="row">
-        <div class="col-xs-4 col-sm-2 col-sm-offset-2">Contributing</div>
-        <div class="col-xs-8 col-sm-8">
-         <p>asd</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-4 col-sm-2 col-sm-offset-2">Teaching</div>
-        <div class="col-xs-8 col-sm-8">
-         <p>asd</p>
+      <div class="row text-center">
+        <div>
+            <p>I'm passionate web developer who loves coding and technology. I'm also interested in DevOps.<br> 
+            On spare time I play guitar, play videogames and read books.<br>
+        Feel free to reach out to me, I'm always open for new opportunities.</p>
         </div>
       </div>
     </section>
