--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           <div class="row">
             <div class="col-xs-4 col-sm-2 col-sm-offset-2"><a href="https://vadelmapilvi.com/">Vadelmapilvi</a></div>
             <div class="col-xs-8 col-sm-8">
-              <p>House service app built with React, NodeJS, Nginx & MongoDB</p>
+              <p>House maintenance app built with React, NodeJS, Nginx & MongoDB</p>
             </div>
           </div>
           <div class="row">
