Added contact form

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               <a href="#page-top"></a>
             </li>
             <li class="">
-                <a class="page-scroll" href="#projects">Projects</a>
+              <a class="page-scroll" href="#projects">Projects</a>
             </li>
             <li class="">
               <a class="page-scroll" href="#about">About</a>
@@ -133,8 +133,10 @@
                 <span class="light">Ville</span> Savolainen
               </h1>
               <p class="intro-text">
-                <i>Hello, I'm Ville Savolainen.<br>
-                I'm a web developer.</i>
+                <i
+                  >Hello, I'm Ville Savolainen.<br />
+                  I'm a web developer.</i
+                >
               </p>
             </div>
           </div>
@@ -142,29 +144,37 @@
       </div>
     </header>
     <section id="projects" class="container content-section">
-        <div class="row text-center">
-            <div class="col-lg-8 col-lg-offset-2">
-              <h2>Projects</h2>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-xs-4 col-sm-2 col-sm-offset-2"><a href="https://vadelmapilvi.com/">Vadelmapilvi</a></div>
-            <div class="col-xs-8 col-sm-8">
-              <p>House maintenance app built with React, NodeJS, Nginx & MongoDB</p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-xs-4 col-sm-2 col-sm-offset-2"><a href="https://descents.rocks/">Descents</a></div>
-            <div class="col-xs-8 col-sm-8">
-              <p>Bands website built with PHP & Apache2</p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-xs-4 col-sm-2 col-sm-offset-2"><a href="https://github.com/VilleSavolainen1/Weather-App">Weather-app</a></div>
-            <div class="col-xs-8 col-sm-8">
-              <p>Weather-app built with React Native & OpenWeatherMap API</p>
-            </div>
-          </div>
+      <div class="row text-center">
+        <div class="col-lg-8 col-lg-offset-2">
+          <h2>Projects</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-4 col-sm-2 col-sm-offset-2">
+          <a href="https://vadelmapilvi.com/">Vadelmapilvi</a>
+        </div>
+        <div class="col-xs-8 col-sm-8">
+          <p>House maintenance app built with React, NodeJS, Nginx & MongoDB</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-4 col-sm-2 col-sm-offset-2">
+          <a href="https://descents.rocks/">Descents</a>
+        </div>
+        <div class="col-xs-8 col-sm-8">
+          <p>Bands website built with PHP & Apache2</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-4 col-sm-2 col-sm-offset-2">
+          <a href="https://github.com/VilleSavolainen1/Weather-App"
+            >Weather-app</a
+          >
+        </div>
+        <div class="col-xs-8 col-sm-8">
+          <p>Weather-app for android, built with React Native & OpenWeatherMap API</p>
+        </div>
+      </div>
     </section>
     <!-- About Section -->
     <section id="about" class="container content-section">
@@ -175,9 +185,12 @@
       </div>
       <div class="row text-center">
         <div>
-            <p>I'm passionate web developer who loves coding and technology. I'm also interested in DevOps.<br> 
-            On spare time I play guitar, play videogames and read books.<br>
-        Feel free to reach out to me, I'm always open for new opportunities.</p>
+          <p>
+            I'm passionate web developer who loves coding and technology. I'm
+            also interested in DevOps.<br />
+            On spare time I play guitar, play videogames and read books.<br />
+            Feel free to reach out to me, I'm always open for new opportunities.
+          </p>
         </div>
       </div>
     </section>
@@ -185,12 +198,24 @@
     <!-- Contact Section -->
     <section id="contact" class="container content-section text-center">
       <div class="row">
-        <div class="col-lg-8 col-lg-offset-2">
-          <h2>Contact</h2>
-          <p>
-            Email
-            <a href="mailto:visavola@gmail.com">visavola@gmail.com</a>
-          </p>
+        <div class="col-lg-6 col-lg-offset-3">
+          <h2>Contact</h2><br>
+          <form accept-charset="UTF-8" action="https://usebasin.com/f/7ecd35ad2780" enctype="multipart/form-data" method="POST">
+            <div class="form-group">
+              <label for="name">Name</label>
+              <input type="text" name="name" class="form-control" id="name" required>
+            </div>
+            <div class="form-group">
+              <label for="email">E-mail</label>
+              <input type="email" name="email" class="form-control" id="email">
+            </div>
+            <div class="form-group">
+              <label for="textarea">Message</label>
+              <textarea class="form-control" name="message" id="textarea" rows="5" required></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form><br><br>
+          <div class="col-lg-8 col-lg-offset-2">
           <a
             href="https://www.linkedin.com/in/ville-savolainen-21a175193/"
             class="btn btn-default btn-lg"
@@ -198,13 +223,13 @@
             <span class="network-name">LinkedIn</span></a
           >
 
-          <a href="https://github.com/VilleSavolainen1/" class="btn btn-default btn-lg"
+          <a
+            href="https://github.com/VilleSavolainen1/"
+            class="btn btn-default btn-lg"
             ><i class="fa fa-github fa-fw"></i>
             <span class="network-name">Github</span></a
           >
-
-        
-
+          </div>
         </div>
       </div>
     </section>
