--- a/index.html
+++ b/index.html
@@ -114,16 +114,13 @@
             <li class="">
               <a class="page-scroll" href="#about">About</a>
             </li>
-            <li class="active">
+            <li class="">
               <a class="page-scroll" href="#contact">Contact</a>
             </li>
           </ul>
         </div>
-        <!-- /.navbar-collapse -->
       </div>
-      <!-- /.container -->
     </nav>
-    <!-- Intro Header -->
     <header class="intro">
       <div class="intro-body">
         <div class="container">
