--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
     <!-- Navigation -->
     <nav
-      class="navbar navbar-custom navbar-fixed-top top-nav-collapse"
+      class="navbar navbar-custom navbar-fixed-top"
       role="navigation"
     >
       <div class="container-fluid">
