Icons for buttons

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="web developer" />
     <meta name="author" content="" />
+    <script src="https://use.fontawesome.com/4cb3f7636f.js"></script>
     <title>Ville Savolainen</title>
     <!-- Bootstrap Core CSS -->
     <link href="files/bootstrap.css" rel="stylesheet" />
