Fixed invalid HTTP request

--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html
   class="wf-pragmaticawebcondensed-n4-active wf-pragmaticaweb-n7-active wf-pragmaticaweb-i7-active wf-pragmaticaweb-n3-active wf-pragmaticaweb-i3-active wf-active hxosqfclkoa idc0_319"
@@ -10,6 +8,9 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="last-modified" content="Sun, 10 Feb 2013 14:00:46 GMT " />
+    <meta http-equiv="cache-control" content="Private" />
+    <meta http-equiv="Expires" content="600" />
     <meta name="description" content="web developer" />
     <meta name="author" content="" />
     <script src="https://use.fontawesome.com/4cb3f7636f.js"></script>
@@ -19,7 +20,6 @@
     <!-- Custom CSS -->
     <link href="files/grayscale.css" rel="stylesheet" />
     <!-- Custom Fonts -->
-    <link href="files/font-awesome.css" rel="stylesheet" type="text/css" />
     <style type="text/css">
       .tk-pragmatica-web {
         font-family: "pragmatica-web", sans-serif;
@@ -94,10 +94,7 @@
 
   <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
     <!-- Navigation -->
-    <nav
-      class="navbar navbar-custom navbar-fixed-top"
-      role="navigation"
-    >
+    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand page-scroll" href="#page-top">
@@ -172,7 +169,10 @@
           >
         </div>
         <div class="col-xs-8 col-sm-8">
-          <p>Weather-app for android, built with React Native & OpenWeatherMap API</p>
+          <p>
+            Weather-app for android, built with React Native & OpenWeatherMap
+            API
+          </p>
         </div>
       </div>
     </section>
@@ -199,36 +199,60 @@
     <section id="contact" class="container content-section text-center">
       <div class="row">
         <div class="col-lg-6 col-lg-offset-3">
-          <h2>Contact</h2><br>
-          <form accept-charset="UTF-8" action="https://usebasin.com/f/7ecd35ad2780" enctype="multipart/form-data" method="POST">
+          <h2>Contact</h2>
+          <br />
+          <form
+            accept-charset="UTF-8"
+            action="https://usebasin.com/f/7ecd35ad2780"
+            enctype="multipart/form-data"
+            method="POST"
+          >
             <div class="form-group">
               <label for="name">Name</label>
-              <input type="text" name="name" class="form-control" id="name" required>
+              <input
+                type="text"
+                name="name"
+                class="form-control"
+                id="name"
+                required
+              />
             </div>
             <div class="form-group">
               <label for="email">E-mail</label>
-              <input type="email" name="email" class="form-control" id="email">
+              <input
+                type="email"
+                name="email"
+                class="form-control"
+                id="email"
+              />
             </div>
             <div class="form-group">
               <label for="textarea">Message</label>
-              <textarea class="form-control" name="message" id="textarea" rows="5" required></textarea>
+              <textarea
+                class="form-control"
+                name="message"
+                id="textarea"
+                rows="5"
+                required
+              ></textarea>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
-          </form><br><br>
+          </form>
+          <br /><br />
           <div class="col-lg-8 col-lg-offset-2">
-          <a
-            href="https://www.linkedin.com/in/ville-savolainen-21a175193/"
-            class="btn btn-default btn-lg"
-            ><i class="fa fa-linkedin fa-fw"></i>
-            <span class="network-name">LinkedIn</span></a
-          >
+            <a
+              href="https://www.linkedin.com/in/ville-savolainen-21a175193/"
+              class="btn btn-default btn-lg"
+              ><i class="fa fa-linkedin fa-fw"></i>
+              <span class="network-name">LinkedIn</span></a
+            >
 
-          <a
-            href="https://github.com/VilleSavolainen1/"
-            class="btn btn-default btn-lg"
-            ><i class="fa fa-github fa-fw"></i>
-            <span class="network-name">Github</span></a
-          >
+            <a
+              href="https://github.com/VilleSavolainen1/"
+              class="btn btn-default btn-lg"
+              ><i class="fa fa-github fa-fw"></i>
+              <span class="network-name">Github</span></a
+            >
           </div>
         </div>
       </div>
