--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <meta name="description" content="web developer" />
     <meta name="author" content="" />
     <script src="https://use.fontawesome.com/4cb3f7636f.js"></script>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
     <title>Ville Savolainen</title>
     <!-- Bootstrap Core CSS -->
     <link href="files/bootstrap.css" rel="stylesheet" />
