--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="last-modified" content="Sun, 10 Feb 2013 14:00:46 GMT " />
     <meta http-equiv="cache-control" content="Private" />
     <meta http-equiv="Expires" content="600" />
     <meta name="description" content="web developer" />
     <meta name="author" content="" />
     <script src="https://use.fontawesome.com/4cb3f7636f.js"></script>
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-<link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <title>Ville Savolainen</title>
     <!-- Bootstrap Core CSS -->
     <link href="files/bootstrap.css" rel="stylesheet" />
