--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <input type="text" name="name" class="form-control" id="name" required />
           </div>
           <div class="form-group">
-            <label for="email">E-mail</label>
+            <label for="email">E-mail*</label>
             <input type="email" name="email" class="form-control" id="email" />
           </div>
           <div class="form-group">
