--- a/index.html
+++ b/index.html
@@ -192,11 +192,11 @@
           method="POST">
           <div class="form-group">
             <label for="name">Name</label>
-            <input type="text" name="name" class="form-control" id="name" required />
+            <input type="text" name="name" class="form-control" id="name" />
           </div>
           <div class="form-group">
             <label for="email">E-mail*</label>
-            <input type="email" name="email" class="form-control" id="email" />
+            <input type="email" name="email" class="form-control" id="email" required/>
           </div>
           <div class="form-group">
             <label for="textarea">Message</label>
