--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <input type="email" name="email" class="form-control" id="email" required/>
           </div>
           <div class="form-group">
-            <label for="textarea">Message</label>
+            <label for="textarea">Message*</label>
             <textarea class="form-control" name="message" id="textarea" rows="5" required></textarea>
           </div>
           <button type="submit" class="btn btn-primary">Submit</button>
