--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <meta name="description" content="web developer" />
     <meta name="author" content="" />
     <script src="https://use.fontawesome.com/4cb3f7636f.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
+    />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <title>Ville Savolainen</title>
@@ -127,7 +131,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-10 col-md-offset-1">
-              <h1 class="brand-heading">
+              <h1 class="brand-heading animate__animated animate__fadeIn" >
                 <span class="light">Ville</span> Savolainen
               </h1>
               <p class="intro-text">
