--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           <a href="https://vadelmapilvi.com/">Vadelmapilvi</a>
         </div>
         <div class="col-xs-8 col-sm-8">
-          <p>House maintenance app built with React, NodeJS, Nginx & MongoDB</p>
+          <p>House maintenance app for making notes and to keep track of different tasks. Built with React, NodeJS, Nginx & MongoDB</p>
         </div>
       </div>
       <div class="row">
@@ -164,7 +164,7 @@
           <a href="https://descents.rocks/">Descents</a>
         </div>
         <div class="col-xs-8 col-sm-8">
-          <p>Bands website built with PHP & Apache2</p>
+          <p>Bands private website for project management and schedules. Built with PHP, MySQL & Apache2</p>
         </div>
       </div>
       <div class="row">
