Edited logiin form

--- a/index.html
+++ b/index.html
@@ -219,20 +219,20 @@
                 name="name"
                 class="form-control"
                 id="name"
-                required
               />
             </div>
             <div class="form-group">
-              <label for="email">E-mail</label>
+              <label for="email">E-mail*</label>
               <input
                 type="email"
                 name="email"
                 class="form-control"
                 id="email"
+                required
               />
             </div>
             <div class="form-group">
-              <label for="textarea">Message</label>
+              <label for="textarea">Message*</label>
               <textarea
                 class="form-control"
                 name="message"
