Edited contact form

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 required
               ></textarea>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Send</button>
           </form>
           <br /><br />
           <div class="col-lg-8 col-lg-offset-2">
