--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="cache-control" content="Private" />
     <meta http-equiv="Expires" content="600" />
-    <meta name="description" content="web developer" />
+    <meta name="description" content="My name is Ville Savolainen, I'm a web developer." />
     <meta name="author" content="" />
     <script src="https://use.fontawesome.com/4cb3f7636f.js"></script>
     <link
