--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       </div>
       <div class="row">
         <div class="col-xs-4 col-sm-2 col-sm-offset-2">
-          <a href="https://vadelmapilvi.com/">Vadelmapilvi</a>
+          <a href="https://vadelmapilvi.com/">House service</a>
         </div>
         <div class="col-xs-8 col-sm-8">
           <p>House maintenance app for making notes and to keep track of different tasks. Built with React, NodeJS, Nginx & MongoDB</p>
