--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <a href="https://descents.rocks/">Descents</a>
         </div>
         <div class="col-xs-8 col-sm-8">
-          <p>Bands private website for project management and schedules. Built with PHP, MySQL & Apache2</p>
+          <p>Bands private website for project management and schedules, including calendar and playlist. Built with PHP, MySQL & Apache2</p>
         </div>
       </div>
       <div class="row">
