--- a/index.html
+++ b/index.html
@@ -152,34 +152,28 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-4 col-sm-2 col-sm-offset-2">
-          <a href="https://vadelmapilvi.com/">House service</a>
+        <div class="column">
+          <div class="content">
+            <a href="https://vadelmapilvi.com"><img src="./Images/screenshot.png" alt="Service" style="width:100%"></a>
+            <h3>House service</h3>
+            <p>House maintenance app for making notes and to keep track of different tasks. Built with React, NodeJS, Nginx & MongoDB</p>
+          </div>
         </div>
-        <div class="col-xs-8 col-sm-8">
-          <p>House maintenance app for making notes and to keep track of different tasks. Built with React, NodeJS, Nginx & MongoDB</p>
+        <div class="column">
+          <div class="content">
+            <a href="https://descents.rocks"><img src="./Images/descents.png" alt="Descents" style="width:100%"></a>
+            <h3>Descents</h3>
+            <p>Bands private website for project management and schedules, including calendar and playlist. Built with PHP, MySQL & Apache2</p>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-4 col-sm-2 col-sm-offset-2">
-          <a href="https://descents.rocks/">Descents</a>
+        <div class="column">
+          <div class="content">
+            <a href="https://github.com/VilleSavolainen1/Weather-App"><img src="./Images/weather.png" alt="Service" style="width:40%"></a>
+            <h3>Weather app</h3>
+            <p> Weather-app for android, built with React Native & OpenWeatherMap
+              API</p>
+          </div>
         </div>
-        <div class="col-xs-8 col-sm-8">
-          <p>Bands private website for project management and schedules, including calendar and playlist. Built with PHP, MySQL & Apache2</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-4 col-sm-2 col-sm-offset-2">
-          <a href="https://github.com/VilleSavolainen1/Weather-App"
-            >Weather-app</a
-          >
-        </div>
-        <div class="col-xs-8 col-sm-8">
-          <p>
-            Weather-app for android, built with React Native & OpenWeatherMap
-            API
-          </p>
-        </div>
-      </div>
     </section>
     <!-- About Section -->
     <section id="about" class="container content-section">
