Edited info text

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               </h1>
               <p class="intro-text">
                 <i
-                  >Hello, I'm Ville Savolainen.<br />
+                  >Hello, my name is Ville Savolainen.<br />
                   I'm a web developer.</i
                 >
               </p>
