--- a/index.html
+++ b/index.html
@@ -152,22 +152,22 @@
       <div class="row">
         <div class="column">
           <div class="content">
-            <a href="https://vadelmapilvi.com"><img src="./Images/screenshot.png" alt="Service" style="width:100%"></a>
-            <h3>House service</h3>
-            <p>House maintenance app for making notes and to keep track of different tasks. Built with React, NodeJS, Nginx & MongoDB</p>
+            <a href="https://vadelmapilvi.com"><img src="./Images/screenshot.png" alt="Service" style="width:100%; height: 180px"></a>
+            <h3 style="margin-top: 10px;">House service</h3>
+            <p>House maintenance app for making notes and to keep track of different tasks. Built with ReactJs, NodeJS, Nginx & MongoDB</p>
           </div>
         </div>
         <div class="column">
           <div class="content">
-            <a href="https://descents.rocks"><img src="./Images/descents.png" alt="Descents" style="width:100%"></a>
-            <h3>Descents</h3>
-            <p>Bands private website for project management and schedules, including calendar and playlist. Built with PHP, MySQL & Apache2</p>
+            <a href="https://descents.rocks"><img src="./Images/descents.png" alt="Descents" style="width:100%; height: 180px"></a>
+            <h3 style="margin-top: 10px;">Descents</h3>
+            <p>Bands private website for project management and schedules, including calendar and playlist. Built with ReactJs, NodeJs, PostgreSQL</p>
           </div>
         </div>
         <div class="column">
           <div class="content">
-            <a href="https://github.com/VilleSavolainen1/Weather-App"><img src="./Images/weather.png" alt="Service" style="width:40%"></a>
-            <h3>Weather app</h3>
+            <a href="https://github.com/VilleSavolainen1/Weather-App"><img src="./Images/weather.png" alt="Service" style="width:45%; height: 180px;"></a>
+            <h3 style="margin-top: 10px;">Weather app</h3>
             <p> Weather-app for android, built with React Native & OpenWeatherMap
               API</p>
           </div>
