Responsive project-section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
     />
+    <link rel="stylesheet" href="./files/style.css"/>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <title>Ville Savolainen</title>
@@ -149,24 +150,24 @@
           <h2>Projects</h2>
         </div>
       </div>
-      <div class="row">
-        <div class="column">
-          <div class="content">
-            <a href="https://vadelmapilvi.com"><img src="./Images/screenshot.png" alt="Service" style="width:100%; height: 180px"></a>
+      <div class="project-section">
+        <div class="project">
+          <div class="project-content">
+            <a href="https://vadelmapilvi.com"><img src="./Images/screenshot.png" alt="Service" id="project-image"></a>
             <h3 style="margin-top: 10px;">House service</h3>
             <p>House maintenance app for making notes and to keep track of different tasks. Built with ReactJs, NodeJS, Nginx & MongoDB</p>
           </div>
         </div>
-        <div class="column">
-          <div class="content">
-            <a href="https://descents.rocks"><img src="./Images/descents.png" alt="Descents" style="width:100%; height: 180px"></a>
+        <div class="project">
+          <div class="project-content">
+            <a href="https://descents.rocks"><img src="./Images/descents.png" alt="Descents" id="project-image"></a>
             <h3 style="margin-top: 10px;">Descents</h3>
             <p>Bands private website for project management and schedules, including calendar and playlist. Built with ReactJs, NodeJs, PostgreSQL</p>
           </div>
         </div>
-        <div class="column">
-          <div class="content">
-            <a href="https://github.com/VilleSavolainen1/Weather-App"><img src="./Images/weather.png" alt="Service" style="width:45%; height: 180px;"></a>
+        <div class="project">
+          <div class="project-content">
+            <a href="https://github.com/VilleSavolainen1/Weather-App"><img src="./Images/weather.png" alt="Service" id="project-image-phone"></a>
             <h3 style="margin-top: 10px;">Weather app</h3>
             <p> Weather-app for android, built with React Native & OpenWeatherMap
               API</p>
