new project added

--- a/index.html
+++ b/index.html
@@ -173,6 +173,13 @@
               API</p>
           </div>
         </div>
+        <div class="project">
+          <div class="project-content">
+            <a href="http://ec2-13-51-252-148.eu-north-1.compute.amazonaws.com"><img src="./Images/issuetracker.png" alt="Service" id="issue-image"></a>
+            <h3 style="margin-top: 10px;">Issue Tracker</h3>
+            <p> Issue Tracker, built with React, Node & PostgreSql</p>
+          </div>
+        </div>
     </section>
     
     <section id="about" class="container content-section">
