added github links

--- a/index.html
+++ b/index.html
@@ -27,58 +27,6 @@
     <link href="files/grayscale.css" rel="stylesheet" />
    
     <style type="text/css">
-      .tk-pragmatica-web {
-        font-family: "pragmatica-web", sans-serif;
-      }
-      .tk-pragmatica-web-condensed {
-        font-family: "pragmatica-web-condensed", sans-serif;
-      }
-    </style>
-    <style type="text/css">
-      @font-face {
-        font-family: pragmatica-web;
-        src: url(https://use.typekit.net/af/983872/0000000000000000000100cc/27/l?subset_id=2&fvd=n7&v=3)
-            format("woff2"),
-          url(https://use.typekit.net/af/983872/0000000000000000000100cc/27/d?subset_id=2&fvd=n7&v=3)
-            format("woff"),
-          url(https://use.typekit.net/af/983872/0000000000000000000100cc/27/a?subset_id=2&fvd=n7&v=3)
-            format("opentype");
-        font-weight: 700;
-        font-style: normal;
-      }
-      @font-face {
-        font-family: pragmatica-web;
-        src: url(https://use.typekit.net/af/a362cc/0000000000000000000100cd/27/l?subset_id=2&fvd=i7&v=3)
-            format("woff2"),
-          url(https://use.typekit.net/af/a362cc/0000000000000000000100cd/27/d?subset_id=2&fvd=i7&v=3)
-            format("woff"),
-          url(https://use.typekit.net/af/a362cc/0000000000000000000100cd/27/a?subset_id=2&fvd=i7&v=3)
-            format("opentype");
-        font-weight: 700;
-        font-style: italic;
-      }
-      @font-face {
-        font-family: pragmatica-web;
-        src: url(https://use.typekit.net/af/ee2748/0000000000000000000100d0/27/l?subset_id=2&fvd=n3&v=3)
-            format("woff2"),
-          url(https://use.typekit.net/af/ee2748/0000000000000000000100d0/27/d?subset_id=2&fvd=n3&v=3)
-            format("woff"),
-          url(https://use.typekit.net/af/ee2748/0000000000000000000100d0/27/a?subset_id=2&fvd=n3&v=3)
-            format("opentype");
-        font-weight: 300;
-        font-style: normal;
-      }
-      @font-face {
-        font-family: pragmatica-web;
-        src: url(https://use.typekit.net/af/86eeb6/0000000000000000000100d1/27/l?subset_id=2&fvd=i3&v=3)
-            format("woff2"),
-          url(https://use.typekit.net/af/86eeb6/0000000000000000000100d1/27/d?subset_id=2&fvd=i3&v=3)
-            format("woff"),
-          url(https://use.typekit.net/af/86eeb6/0000000000000000000100d1/27/a?subset_id=2&fvd=i3&v=3)
-            format("opentype");
-        font-weight: 300;
-        font-style: italic;
-      }
       @font-face {
         font-family: pragmatica-web-condensed;
         src: url(https://use.typekit.net/af/841d09/0000000000000000000100d4/27/l?subset_id=2&fvd=n4&v=3)
@@ -91,6 +39,14 @@
         font-style: normal;
       }
     </style>
+    <style type="text/css">
+      .tk-pragmatica-web {
+        font-family: "pragmatica-web", sans-serif;
+      }
+      .tk-pragmatica-web-condensed {
+        font-family: "pragmatica-web-condensed", sans-serif;
+      }
+    </style>
     <script type="text/javascript">
       try {
         Typekit.load();
@@ -99,7 +55,6 @@
   </head>
 
   <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
-    
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -155,6 +110,7 @@
           <div class="project-content">
             <a href="https://vadelmapilvi.com"><img src="./Images/screenshot.png" alt="Service" id="project-image"></a>
             <h3 style="margin-top: 10px;">House service</h3>
+            <a href="https://github.com/VilleSavolainen1/Huoltokirja">Github</a>
             <p>House maintenance app for making notes and to keep track of different tasks. Built with ReactJs, NodeJS, Nginx & MongoDB</p>
           </div>
         </div>
@@ -162,6 +118,7 @@
           <div class="project-content">
             <a href="https://descents.rocks"><img src="./Images/descents.png" alt="Descents" id="project-image"></a>
             <h3 style="margin-top: 10px;">Descents</h3>
+            <a href="https://github.com/VilleSavolainen1/Descents-homepage">Github</a>
             <p>Bands private website for project management and schedules, including calendar and playlist. Built with ReactJs, NodeJs, PostgreSQL</p>
           </div>
         </div>
@@ -177,6 +134,7 @@
           <div class="project-content">
             <a href="http://ec2-13-51-252-148.eu-north-1.compute.amazonaws.com"><img src="./Images/issuetracker.png" alt="Service" id="issue-image"></a>
             <h3 style="margin-top: 10px;">Issue Tracker</h3>
+            <a href="https://github.com/VilleSavolainen1/Issue-Tracker">Github</a>
             <p> Issue Tracker, built with React, Node & PostgreSql</p>
           </div>
         </div>
